# automated-release-rc

./: .gitignore  ENTERPRISE_SETUP.md  FINAL_TEST_RESULTS.md  IMPROVEMENTS_SUMMARY.md  LICENSE_PROPRIETARY.md  MVP_TESTING_GUIDE.md  README.md  SERVERLESS_IMPLEMENTATION.md  TEST_RESULTS_SUMMARY.md  debug_crq.py  debug_template.py  demo_cli_workflow.py  demo_improvements.py  demo_test.py  main.py  pyproject.toml  release_signoff_notifier.py  requirements.txt  run_rc_agent.sh  run_release_agent.py  run_tests.py  signoff_bot.py  test_cli.py  test_github_integration.py  test_pr_counts.py  test_slack_modal.py
.github/workflows/: run_release.yml
config/: config.py  settings.example.yaml  settings.test.yaml
crq/: __init__.py  external_template.py  generate_crqs.py
docs/: CLI_AGENT_README.md  IMPLEMENTATION_SUMMARY.md  SETUP.md  SLACK_TESTING.md  TEST_SUMMARY.md  configuration.md  quickstart.md
github_integration/: fetch_prs.py
notes/: release_notes.py
output_test/: rc_config.json
output_test/perfcopilot_0.4.7_20231223_053650/: pr_authors.json  release_notes.md
outputs/: rc_config.json
outputs/perfcopilot_0.4.7_20231123_054304/: pr_authors.json  release_notes.md
release/: rc_config.json
release/perfcopilot_0.4.7_20250723_225155/: pr_authors.json  release_notes.md
scripts/: check_github_permissions.py  check_minimal_permissions.py  demo_cli_workflow.py  demo_improvements.py  demo_llm_v3.py  demo_v3_integration.py  run_tests.py  test_github_trigger.py  test_v3_template_structure.py
setup/: signoff_bot_deploy.md  slack_app_manifest.json  slack_workflow_serverless.md  slack_workflow_setup.md
slack-cli-example/functions/: message_pr_authors.ts  receive_results.ts  trigger_release.ts
slack_bot/: DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  app.py  config.py  docker-compose.yml  integration.py  server.py  test_bot.py
src/: __init__.py
src/cli/: __init__.py  rc_agent_build_release.py  run_release_agent.py
src/config/: __init__.py  config.py  (+3 more)
templates/: crq_template.j2  release_notes.j2
test_data/: sample_metadata.json  sample_prs.json
tests/: __init__.py  conftest.py  demo_test.py  test_cli.py  test_external_template.py  test_llm_section8_bugfix.py  test_pr_counts.py  test_real_github_workflow.py  test_refactored_structure.py  test_v4_features.py
utils/: logging.py
(+19 files in other folders)
