[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rc-release-agent"
version = "1.0.0"
description = "Automated Release Workflow System for RC Release Coordination"
readme = "README.md"
authors = [
    {name = "Arnoldo Munoz", email = "arnoldo@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "PyGithub>=1.58.0",
    "slack-sdk>=3.19.0",
    "Jinja2>=3.1.0",
    "PyYAML>=6.0",
    "python-dateutil>=2.8.0",
    "schedule>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/ArnoldoM23/automated-release-rc"
Repository = "https://github.com/ArnoldoM23/automated-release-rc"
Documentation = "https://github.com/ArnoldoM23/automated-release-rc/blob/main/docs/README.md"
Issues = "https://github.com/ArnoldoM23/automated-release-rc/issues"

[project.scripts]
rc-release-agent = "src.cli.run_release_agent:main"
rc-slack-bot = "src.slack.release_signoff_notifier:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"src.templates" = ["*.j2", "*.jinja2"]
"src.config" = ["*.yaml", "*.yml"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "github.*",
    "slack_sdk.*",
    "schedule.*",
]
ignore_missing_imports = true 